--- a/index.html
+++ b/index.html
@@ -2,10 +2,14 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>React Time</title>
+  <link rel="stylesheet" type="text/css" href="css/reset.css"/>
+  <link rel="stylesheet" href="css/styles.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=true;">
+  <title>weathrly</title>
 </head>
 <body>
   <div class="application"></div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   <script src="main.bundle.js"></script>
 </body>
 </html>
