--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" type="text/css" href="css/reset.css"/>
-  <link rel="stylesheet" href="css/styles.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=true;">
   <title>weathrly</title>
 </head>
 <body>
-  <div class="application"></div>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+  <div id="app"></div>
   <script src="main.bundle.js"></script>
+  
 </body>
 </html>
